# easy-agent

./: LICENSE  README.md  pyproject.toml
easy_agent/: logger.py
easy_agent/base/: __init__.py
easy_agent/common/: kb_api_retriever.py  retrieval.py
easy_agent/prebuilt/: __init__.py  rag.py
easy_agent/templates/: api_response_templates.py  base_agent.py  configuration_templates.py  handoff_templates.py  prompt_template.py  state_templates.py
easy_agent/utils/: decorators.py  inject_utils.py  operator_utils.py  utils.py
examples/: api_usage.py  basic_usage.py
src/easy_agent/: __init__.py  config.py
src/easy_agent/agents/: __init__.py  react_agents.py
src/easy_agent/api/: __init__.py
src/easy_agent/core/: state.py
src/easy_agent/nodes/: __init__.py
src/easy_agent/utils/: message_utils.py  model_utils.py  prompt_utils.py
src/easy_agent/workflow/: __init__.py
