[project]
name = "easy-agent"
version = "0.1.0"
description = "Based on the multi-agent (Multi-Agent) framework built on LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Shen Kai", email = "watcher.shen@gmail.com" }
]
dependencies = [
    "aiohttp>=3.11.18",
    "asyncio>=3.4.3",
    "langchain>=0.3.24",
    "langchain-cohere>=0.4.4",
    "langchain-community>=0.3.22",
    "langchain-core==0.3.55",
    "langchain-elasticsearch>=0.3.2",
    "langchain-experimental>=0.3.4",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-mongodb>=0.6.1",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.34",
    "langgraph-cli[inmem]>=0.2.7",
    "loguru>=0.7.3",
    "mcp>=1.6.0",
    "openai>=1.76.0",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# 添加包配置
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

